# iosl-ai-agent-identity

./: README.md  pyproject.toml  requirements.txt
domain_a/: agent_god_key.json  main.py
domain_a/agent_a/: agent_a_godvc.json  agent_a_key.json  agent_a_prompt.py  received_vc_from_agent_x.json  tools_a.py
domain_a/agent_x/: agent_x_god_vc.json  agent_x_prompt.py  tools_x.py
domain_b/: main.py
domain_b/agents/agent_b/: agent_b_godvc.json  agent_b_prompt.py  received_vc_540699b4-2c1a-49c5-9be9-c0d89c193516.json  received_vc_urn_uuid_14389971-fa0e-43b0-be79-0d0d0f39a0d6.json
domain_b/agents/agent_y/: agent_y_god_vc.json  agent_y_key.json  agent_y_prompt.py
google_a2a/: agent_a_executer.py  client.py  host_agent.py  main.py  remote_agent_connection.py
mcp_server_setup/mcp_holder_tools/: holder_tools.py  mcp_server_holder_tools.py
mcp_server_setup/mcp_issuer_tools/: issuer_tools.py  mcp_server_issuer_tools.py
