[project]
name = "iosl_ai_agent_identity"
version = "0.1.0"
authors = [{ name = "Buse Varkan" }]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "google_a2a*",
    "domain_a*",
    "domain_b*",
    "mcp_server_setup*"
]
